--- a/Api/package.json
+++ b/Api/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.6.8",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.37.0",
     "cors": "^2.8.5",
@@ -24,11 +23,11 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
-    "mssql": "^11.0.1",
-    "mysql": "^2.18.1",
     "node": "^22.1.0",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "pg": "^8.15.5",
+    "postgres": "^3.4.5",
     "utf-8-validate": "^6.0.4"
   }
 }
